# python-parts-service

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/parts_service/: __init__.py  lambda_handler.py
terraform/: .tflint.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: __init__.py  test_lambda_handler.py
